[tool.poetry]
name = "lmaofit"
version = "0.1.0"
description = "fuck you"
authors = ["Hannes Wendt <hanneswendt22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lmfit = "^1.2.2"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
